--- a/Golden_Search_Investigation.ipynb
+++ b/Golden_Search_Investigation.ipynb
@@ -21,7 +21,7 @@
       "metadata": {},
       "source": [
         "# Part I\n",
-        "This portion is my attempt of coding the Golden Section Search as described on pages 7 and 8 in the following text:\n",
+        "This portion is my attempt to implement the Golden Section Search as described on pages 7 and 8 in the following text:\n",
         "https://nm.mathforcollege.com/mws/gen/09opt/mws_gen_opt_txt_goldensearch.pdf"
       ]
     },
